# sr-notes

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.in  requirements.txt
srn/: __init__.py  __main__.py  constants.py  exceptions.py  note_reviewer.py  release.py
srn/cli/: __init__.py  help.py  review.py
srn/cli/arguments/: option_helpers.py
srn/utils/: _log.py  misc.py  yaml.py
